src/objects/Zephr_Account__c.object
<CustomObject>
    <fields>
        <fullName>Different_on_Subscription__c</fullName>
        <formula>(Id !=  Subscription__r.Zephr_Account__c) &amp;&amp; (Subscription__c != null)</formula>
        <label>Different on Subscription?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Seats__c</fullName>
        <label>Number of Seats</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription</label>
        <referenceTo>Subscription__c</referenceTo>
        <relationshipLabel>Zephr Accounts</relationshipLabel>
        <relationshipName>Zephr_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zephr_API_URL__c</fullName>
        <formula>HYPERLINK(&apos;https://console.zephr.com/v3/accounts/&apos;+ Zephr_Id__c, &apos;Open in Zephr&apos; , &apos;_blank&apos;)</formula>
        <label>Zephr API URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zephr_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Zephr Company</label>
        <referenceTo>Zephr_Company__c</referenceTo>
        <relationshipLabel>Zephr Accounts</relationshipLabel>
        <relationshipName>Zephr_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zephr_Id__c</fullName>
        <description>unique zephr id</description>
        <externalId>true</externalId>
        <label>Zephr Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Zephr_Integration_Message__c</fullName>
        <label>Zephr Integration Message</label>
        <length>8192</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zephr_Integration_Status__c</fullName>
        <label>Zephr Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Zephr_Integration_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zephr_Tenant__c</fullName>
        <description>Zephr tenant this account is attached to</description>
        <inlineHelpText>Zephr tenant this account is attached to</inlineHelpText>
        <label>Zephr Tenant</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Zephr_Tenant</valueSetName>
        </valueSet>
    </fields>
    <label>Zephr Account</label>
    <nameField>
        <label>Zephr Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zephr Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>